Add interactive.html and styles.css and script.js, content of code.

--- a/interactive.html
+++ b/interactive.html
@@ -7,6 +7,16 @@
     <title>Assignment 2: JavaScript Basics</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Enter Your Name:</h2>
+        <input type="text" id="nameInput" placeholder="Your name here...">
+        <br>
+        <button id="greetBtn">Greet Me</button>
+        <p class="greeting" id="greetingMessage"></p>
+        <p class="error" id="errorMessage"></p>
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
