Assignment 2: JavaScript Basics complete.

--- a/interactive.html
+++ b/interactive.html
@@ -12,8 +12,11 @@
         <input type="text" id="nameInput" placeholder="Your name here...">
         <br>
         <button id="greetBtn">Greet Me</button>
-        <p class="greeting" id="greetingMessage"></p>
-        <p class="error" id="errorMessage"></p>
+        <div class="greet" id="greetMessage">
+            <p class="greeting" id="greetingMessage1"></p>
+            <p class="greeting" id="greetingMessage2"></p>
+            <p class="error" id="errorMessage"></p>
+        </div>
     </div>
 
 
